@@ -15,6 +15,7 @@
 !!!	- bugfix: #409804, #410954, #410959 doNotCover quirks
 	- feature: Hungarian messages (Czinege Tamas)
 	- feature: Catalan messages (Toni Cunyat i Alario)
+	- feature: ColorDisabledMenuItemShadow
 
 1.0.7: 2001-03-13
 	- feature: consider horiz/vert border when maximizing (heiky, slow)
